# BirdCode

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
apps/cli/: Cargo.toml
apps/cli/src/: args.rs  main.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: args.rs  json_lines.rs  lib.rs  main.rs  model_policy.rs  server.rs  supervisor.rs
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: README.md  prepare-daemon.sh  tauri-build.sh  tauri-dev.sh
apps/desktop/src/: App.test.tsx  App.tsx  docsPreview.test.ts  docsPreview.ts  main.tsx  runtime.test.ts  runtime.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  runtime.rs
crates/backends/: Cargo.toml  README.md
crates/backends/examples/: lmstudio_probe.rs
crates/backends/src/: contract.rs  lib.rs  lmstudio.rs
crates/backends/tests/: lmstudio_http.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/orchestrator/: Cargo.toml  README.md
crates/orchestrator/src/: actor_graph.rs  lib.rs  planner.rs
crates/orchestrator/tests/: actor_graph.rs  planner.rs  router_executor.rs
crates/prompting/: Cargo.toml
crates/prompting/examples/: lmstudio_router_eval.rs
crates/prompting/schemas/: prompt-manifest.schema.json
crates/prompting/src/: canonical.rs  compiler.rs  lib.rs  manifest.rs  plan_critic.rs  plan_repair.rs  root_planner.rs  router.rs
crates/prompting/tests/: contracts.rs  lmstudio_router_eval_contracts.rs  plan_critic_contracts.rs  root_planner_contracts.rs
crates/prompting/tests/snapshots/: injection_messages.json
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  critic.rs  lib.rs  planning.rs  repair.rs  runtime.rs
crates/runtime/tests/: critic.rs  planning.rs  repair.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/validation/: Cargo.toml  README.md
crates/validation/src/: blind.rs  command.rs  evidence.rs  identity.rs  lib.rs  provenance.rs  target.rs  validation.rs
crates/validation/tests/: adversarial.rs
docs/: architecture.md  benchmarking.md  clean-room-codex-capability-ledger.md  orchestration.md  product-requirements.md  root-planning-policy.md  validation.md
docs/assets/brand/: README.md
docs/evidence/2026-07-19-root-planner-live/: README.md  accepted-plan.json  compiled-prompt.json  inference-request.json  model-proposal.json  provider-evidence.json  validation.json
docs/evidence/2026-07-19-semantic-root-review/: README.md  lmstudio-models.json
docs/evidence/2026-07-20-desktop-captures/: README.md
docs/reviews/: 2026-07-19-durable-root-planner-review.md  2026-07-19-foundation-review.md  2026-07-19-validation-plane-gemma-review.json  2026-07-19-validation-plane-review.md  2026-07-20-semantic-root-review.md  README.md
evals/reports/: 2026-07-19-gemma-4-26b-q8-router-v1.1.0.json  2026-07-19-gemma-4-26b-q8-router-v1.1.1.json  2026-07-19-gemma-4-26b-q8-router-v1.1.2.json  2026-07-19-gemma-4-26b-q8-router-v1.1.3.json  2026-07-19-gemma-4-26b-q8-router.json  README.md
evals/semantic-router/: arabic-delegation.v1.json  arabic-delegation.v2.json  catalog.v1.json  catalog.v2.json  catalog.v3.json  catalog.v4.json  clarification-abstention.v1.json  english-change.v1.json  english-change.v2.json  informational-answer.v1.json  irrelevant-repository-answer.v1.json  japanese-clarification.v1.json  multilingual-delegation.v1.json  multilingual-delegation.v2.json  repository-injection-inspect.v1.json  zero-delegation-read-only.v1.json  zero-delegation-read-only.v2.json  zero-delegation-read-only.v3.json
examples/: root-planning-policy.json
prompts/: README.md  lmstudio-connectivity-probe.v1.json
prompts/plan-semantic-critic/1.0.0/: manifest.json
prompts/root-plan-repair/1.0.0/: manifest.json
prompts/root-planner-turn/1.0.0/: manifest.json
prompts/semantic-task-router-repair/1.0.0/: manifest.json
prompts/semantic-task-router/1.0.0/: manifest.json
prompts/semantic-task-router/1.1.0/: manifest.json
prompts/semantic-task-router/1.1.1/: manifest.json
prompts/semantic-task-router/1.1.2/: manifest.json
prompts/semantic-task-router/1.1.3/: manifest.json
