[package]
name = "birdcode-cli"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "birdcode"
path = "src/main.rs"

[dependencies]
birdcode-client = { path = "../../crates/client" }
birdcode-protocol = { path = "../../crates/protocol" }

[lints]
workspace = true
