[package]
name = "birdcode-cli"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "birdcode"
path = "src/main.rs"

[dependencies]
birdcode-client = { path = "../../crates/client" }
birdcode-protocol = { path = "../../crates/protocol" }
ctrlc = "3.5.1"
serde_json = "1.0.150"
sha2 = "0.10.9"

[lints]
workspace = true
