[package]
name = "birdcode-daemon"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
birdcode-protocol = { path = "../../crates/protocol" }
birdcode-runtime = { path = "../../crates/runtime" }
birdcode-store = { path = "../../crates/store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints]
workspace = true
