[package]
name = "birdcode-daemon"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
birdcode-backends = { path = "../../crates/backends" }
birdcode-prompting = { path = "../../crates/prompting" }
birdcode-protocol = { path = "../../crates/protocol" }
birdcode-runtime = { path = "../../crates/runtime" }
birdcode-store = { path = "../../crates/store" }
chrono = "0.4.42"
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.17"
url = "2.5.7"

[dev-dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.27.0"

[lints]
workspace = true
