[package]
name = "birdcode-client"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
birdcode-protocol = { path = "../protocol" }
serde = "1.0.228"
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
