[package]
name = "birdcode-prompting"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
jsonschema = { version = "0.48.0", default-features = false }
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"

[dev-dependencies]
birdcode-backends = { path = "../backends" }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
