[package]
name = "birdcode-runtime"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
birdcode-backends = { path = "../backends" }
birdcode-prompting = { path = "../prompting" }
birdcode-protocol = { path = "../protocol" }
birdcode-store = { path = "../store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
