[package]
name = "birdcode-store"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
birdcode-protocol = { path = "../protocol" }
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"

[dev-dependencies]
uuid = { version = "1.18.1", features = ["v7"] }
