[package]
name = "birdcode-validation"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
birdcode-protocol = { path = "../protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }

[lints]
workspace = true
