[package]
name = "birdcode-desktop"
version = "0.1.0"
publish = false
description = "BirdCode desktop shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "birdcode_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
birdcode-client = { path = "../../../crates/client" }
birdcode-protocol = { path = "../../../crates/protocol" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[lints]
workspace = true
